[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.43"
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", package = "sui-sdk", tag = "mainnet-v1.64.2" }
shared-crypto = { git = "https://github.com/MystenLabs/sui.git", package = "shared-crypto", tag = "mainnet-v1.64.2" }
anyhow = "1.0.95"
dotenvy = "0.15.7"
bcs = "0.1.6"
rand = "0.8"
sui-keys = { git = "https://github.com/MystenLabs/sui.git", package = "sui-keys", tag = "mainnet-v1.64.2" }
